# supermorecado

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGES.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml  release.yml
contributing/: index.html
docs/: mkdocs.yml
release-notes/: index.html
search/: search_index.json
supermorecado/: __init__.py  burntiles.py  densitytiles.py  edge_finder.py  super_utils.py  uniontiles.py
supermorecado/scripts/: cli.py
tests/: test_cli.py  test_mod.py
tests/expected/: burned.txt  heatmap.txt
tests/fixtures/: france.geojson  heatmap.txt  title.geojson
