[project]
name = "supermorecado"
description = "Extend the functionality of morecantile with additional commands."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = ["GIS", "TMS", "TileMatrixSet", "Map Tile"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "morecantile",
    "rasterio",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]
deploy = [
    "hatch",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pygments",
]

[project.urls]
Source = "https://github.com/developmentseed/supermorecado"
Documentation = "https://developmentseed.org/supermorecado/"

[project.scripts]
supermorecado = "supermorecado.scripts.cli:cli"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "supermorecado/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["supermorecado/"]

[tool.hatch.build.targets.wheel]
only-include = ["supermorecado/"]

[tool.isort]
profile = "black"
known_first_party = ["supermorecado"]
known_third_party = ["rasterio", "morecantile"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D103"]

[tool.bumpversion]
current_version = "0.1.2"
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "supermorecado/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
